fix spacing park layout

--- a/src/components/Park/Park.module.css
+++ b/src/components/Park/Park.module.css
@@ -25,7 +25,7 @@
 
 .mainContainer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
@@ -50,22 +50,28 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-div .featuresList {
+.leftSide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.commentList {
     display: flex;
     flex-direction: column;
     -ms-overflow-style: none; 
     overflow-y: scroll; 
     height: 90vh;
-    width: 30%;
+    width: 40%;
     padding: 12px;
     background-color: #292934;
 }
 
-div .cardContainer {
+.cardContainer {
     width: 70%;
     background-color: #292934;
     border-radius: 1rem;
-    border: 1px solid rgb(200, 200, 200);
     padding: 3rem;
     margin-top: 2rem;
     width: 600px;
